--- a/backend/src/main/resources/log4j.properties
+++ b/backend/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.MyConsAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.MyConsAppender.layout.ConversionPattern=%-5p [%d{yyyy-MM-dd HH:mm:ss,SSS}] %C{1}: %m%n
 
 log4j.appender.MyFileAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.MyFileAppender.File=log.log
+log4j.appender.MyFileAppender.File=logs/log.log
 
 log4j.appender.MyFileAppender.datePattern=yyyy-MM-dd
 
