--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mariadb://localhost:3306/food-consumer?useUnicode=true&characterSetResults=UTF-8&characterEncoding=UTF-8&serverTimezone=Europe/Moscow
+spring.datasource.username=food-consumer
+spring.datasource.password=67b7f471fa16819e
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
