--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,10 @@
     "react-calendar": "^4.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "react-swipeable": "^7.0.1",
     "sass": "^1.69.5",
     "uuid": "^9.0.1",
