--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,10 +42,7 @@
     "workbox-streams": "^6.6.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start --inspect"
   },
   "eslintConfig": {
     "extends": [
