--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-beta.19",
     "@mui/material": "^5.14.19",
-    "@reduxjs/toolkit": "^2.0.1",
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "dataclass": "^2.1.1",
     "moment": "^2.29.4",
-    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
@@ -24,7 +23,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.1",
     "sass": "^1.69.5",
     "uuid": "^9.0.1",
@@ -43,8 +42,8 @@
     "workbox-streams": "^6.6.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
