--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -20,4 +20,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    location /build {
+        alias ~/food-consumer/frontend/build;
+        try_files $uri $uri/ /build/index.html;
+    }
 }
