--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,14 +2,12 @@ FROM node:14
 
 WORKDIR /usr/src/app
 
-RUN npm cache clean --force
-
 COPY package*.json ./
-
+                                
 RUN npm install
-
-COPY . .
-
+                                
+COPY ./build /usr/src/app/build
+                     
 EXPOSE 3000
 
 CMD ["npm", "start"]
