--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,7 @@
     "workbox-streams": "^6.6.0"
   },
   "scripts": {
-    "start": "react-scripts",
+    "start": "react-scripts start",
     "build": "react-scripts",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
