--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 3332;
+    listen 80;
     server_name 0.0.0.0;
 
     location /chat {
@@ -13,11 +13,17 @@ server {
         proxy_set_header Connection "Upgrade";
     }
 
+   location ~ ^/(umd|firebase-init\.js|css)/ {
+       proxy_pass http://tinode-server:6060;
+       proxy_redirect off;
+       proxy_set_header Host $host;
+       proxy_set_header X-Real-IP $remote_addr;
+       proxy_set_header X-Forwarded-Proto $scheme;
+       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+   }
+
     location / {
-        proxy_pass http://spring:8080/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }         
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+        }
 }
