--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 server.address=0.0.0.0
-spring.datasource.url=jdbc:mariadb://localhost:3306/food-consumer?useUnicode=true&characterSetResults=UTF-8&characterEncoding=UTF-8&serverTimezone=Europe/Moscow
+spring.datasource.url=jdbc:mariadb://home.local:3306/food-consumer?useUnicode=true&characterSetResults=UTF-8&characterEncoding=UTF-8&serverTimezone=Europe/Moscow
 spring.datasource.username=food-consumer
 spring.datasource.password=67b7f471fa16819e
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
