--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,28 @@
-FROM node:14
+FROM node:18 as build
 
-WORKDIR /usr/src/app
+# Set the working directory in the container
+WORKDIR /app
 
+# Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
 
-COPY ./build /usr/src/app/build
+# Install dependencies
+RUN npm install
 
-EXPOSE 3000
+# Copy the entire application code to the container
+COPY . .
 
-CMD ["npm", "start"]
+# Build the React app for production
+RUN npm run build
+
+# Use Nginx as the production server
+FROM nginx:alpine
+
+# Copy the built React app to Nginx's web server directory
+COPY --from=build /app/build /usr/share/nginx/html
+
+# Expose port 80 for the Nginx server
+EXPOSE 80
+
+# Start Nginx when the container runs
+CMD ["nginx", "-g", "daemon off;"]
