--- a/config/docker-compose.yml
+++ b/config/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       context: ../frontend
       dockerfile: Dockerfile
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf:ro
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - "3000:80"
 volumes:
