--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -22,8 +22,16 @@ server {
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    }
 
+   location /api/ {
+       proxy_pass http://spring:8080/api/;
+       proxy_set_header Host $host;
+       proxy_set_header X-Real-IP $remote_addr;
+       proxy_set_header X-Forwarded-Proto $scheme;
+       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+   }
+
     location / {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
-        }
+    }
 }
