хаха ну сиди вычитывай

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,5 @@
 FROM eclipse-temurin:17-jdk-jammy
 
-WORKDIR /app
-
-RUN apt-get update && apt-get install -y maven
-
-# Copy only the POM file
-COPY ./pom.xml /app/
-
-# Download Maven dependencies (caching if POM file hasn't changed)
-RUN mvn dependency:go-offline
-
-# Copy the rest of the project files
-COPY . /app/
-
-# Compile and run the application
-RUN mvn clean compile
-
+ADD target/docker-backend.jar docker-backend.jar
+ENTRYPOINT ["java", "-jar","docker-backend.jar"]
 EXPOSE 8080
-
-ENTRYPOINT mvn exec:java -Dspring-boot.run.profiles=docker
