--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,6 @@
-spring.jpa.hibernate.ddl-auto=update
-server.address=0.0.0.0
-spring.datasource.url=jdbc:mariadb://home.local:3306/food-consumer?useUnicode=true&characterSetResults=UTF-8&characterEncoding=UTF-8&serverTimezone=Europe/Moscow
+spring.datasource.url=jdbc:mariadb://maria-db:3306/food-consumer
 spring.datasource.username=food-consumer
 spring.datasource.password=67b7f471fa16819e
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+javax.persistence.jdbc.driver = org.mariadb.jdbc.Driver
+org.hibernate.dialect.Dialect = org.hibernate.dialect.MariaDB103Dialect
