--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -61,6 +61,17 @@ services:
     depends_on:
       - maria-db
 
+  react:
+    container_name: react
+    restart: unless-stopped
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf:ro
+    ports:
+      - "3000:80"
+
 volumes:
   dbdata:
   static_value:
