--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name 0.0.0.0;
 
+    root /var/www/nginx/html;
+    index index.html index.htm index.nginx-debian.html;
+
     location /chat {
         proxy_pass http://tinode-server:6060/;
         proxy_set_header Host $host;
@@ -23,15 +26,18 @@ server {
    }
 
    location /api {
-       proxy_pass http://java-backend:8080/api/;
+       proxy_pass http://java-backend:8080/;
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    }
+	
+   location /tasks {
+       proxy_pass http://localhost:3000/tasks;
+   }
 
     location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
-        }
+        try_files $uri $uri/ =404;
+    }
 }
