--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,16 +6,20 @@ services:
     image: mysql:5.7
     container_name: mysql-chat
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: yes
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
     ports:
       - '3307:3307'
     volumes:
       - mysql-data:/var/lib/mysql
 
-  # server for chat
   tinode-server:
     image: tinode/tinode-mysql:latest
     container_name: tinode-srv
+    depends_on:
+      - mysql
+    restart: unless-stopped
+    environment:
+      MYSQL_DSN: 'mysql://root@tcp(mysql)/tinode'
     ports:
       - '6060:6060'
 
