--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -24,7 +24,7 @@ server {
    }
 
    location /api {
-       proxy_pass http://localhost:8080/;
+       proxy_pass http://java-backend:8080/;
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-Proto $scheme;
