--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,6 @@
-FROM node:18 as build
-
-WORKDIR /app
-
-COPY package*.json ./
-
-RUN npm install
-
-COPY . .
-
-RUN npm run build
-
 FROM nginx:alpine
 
-COPY --from=build /app/build /usr/share/nginx/html
+COPY ./build /usr/share/nginx/html
 
 COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
