--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,10 +1,11 @@
+
 server {
     listen 8000;
     include /etc/nginx/mime.types;
     server_name 0.0.0.0;
 
     location /chat {
-        proxy_pass http://tinode-server:6060/;
+        proxy_pass http://localhost:6060/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -15,7 +16,7 @@ server {
     }
 
    location ~ ^/(umd|firebase-init\.js|css)/ {
-       proxy_pass http://tinode-server:6060;
+       proxy_pass http://localhost:6060;
        proxy_redirect off;
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
@@ -32,7 +33,7 @@ server {
    }
 
     location / {
-        root   /usr/share/nginx/html;
+        root   /usr/share/nginx/html/build;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html =404;
     }
