--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,11 @@
     "react-icons": "^4.12.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.0.4",
-    "react-router-dom": "^6.20.0",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.1",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.69.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
