fix props, refactoring

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/food-consumer
+spring.datasource.url=jdbc:mariadb://maria-db:3306/food-consumer
 spring.datasource.username=food-consumer
 spring.datasource.password=67b7f471fa16819e
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-javax.persistence.jdbc.driver = org.mariadb.jdbc.Driver
-#org.hibernate.dialect.Dialect = org.hibernate.dialect.MariaDB103Dialect
+javax.persistence.jdbc.driver=org.mariadb.jdbc.Driver
+org.hibernate.dialect.Dialect=org.hibernate.dialect.MariaDB103Dialect
