--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+domain=http://5.101.51.223
+
+frontend.url=${domain}:8000
+backend.js.url=${domain}:3000
+
 spring.datasource.url=jdbc:mariadb://maria-db:3306/food-consumer
 spring.datasource.username=food-consumer
 spring.datasource.password=67b7f471fa16819e
