--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -12,5 +12,5 @@
   "display": "standalone",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
-  "orientation": "portrait"
+  "orientation": "portrait-primary"
 }
