--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,11 @@
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "react-swipeable": "^7.0.1",
     "react-transition-group": "^4.4.5",
     "sass": "^1.69.5",
+    "slick-carousel": "^1.8.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
