--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-calendar": "^4.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.0.4",
     "react-router": "^6.22.3",
