--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,6 +74,7 @@
   "devDependencies": {
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.14",
+    "axios": "^1.6.8",
     "react-modern-drawer": "^1.2.2",
     "socket.io-client": "^4.7.5"
   }
