--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,6 +3,8 @@ domain=http://5.101.51.223
 frontend.url=${domain}:8000
 backend.js.url=${domain}:3000
 
+spring.web.resources.static-locations=classpath:/static/,classpath:/public/,file:/root/food-consumer/backend/src/main/resources/static/
+
 spring.datasource.url=jdbc:mariadb://maria-db:3306/food-consumer
 spring.datasource.username=food-consumer
 spring.datasource.password=67b7f471fa16819e
