--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,8 @@ domain=http://5.101.51.223
 frontend.url=${domain}:8000
 backend.js.url=${domain}:3000
 
-spring.web.resources.static-locations=classpath:/static/,classpath:/public/,file:/root/food-consumer/backend/src/main/resources/static/images/
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 spring.datasource.url=jdbc:mariadb://maria-db:3306/food-consumer
 spring.datasource.username=food-consumer
