--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "browser-image-compression": "^2.0.2",
     "dataclass": "^2.1.1",
     "dotenv": "^16.4.5",
+    "heic2any": "^0.0.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-blur": "^1.1.1",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-calendar": "^4.7.0",
@@ -28,6 +31,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.3",
     "react-swipeable": "^7.0.1",
     "react-transition-group": "^4.4.5",
     "sass": "^1.69.5",
