--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,12 +3,12 @@
   "name": "OCP",
   "icons": [
     {
-      "src": "icon512_maskable.png",
-      "sizes": "512x512",
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon512_rounded.png",
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
