--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,9 @@
-domain=http://5.101.51.223
-
-frontend.url=${domain}
-backend.js.url=${domain}:3000
-
+domain=http://localhost
+frontend.url=${domain}:3000
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
-spring.datasource.url=jdbc:mariadb://maria-db:3306/food-consumer
-spring.datasource.username=food-consumer
+spring.datasource.url=jdbc:mariadb://localhost:3306/food-consumer
+spring.datasource.username=root
 spring.datasource.password=67b7f471fa16819e
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 javax.persistence.jdbc.driver=org.mariadb.jdbc.Driver
