--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_URL=http://5.101.51.223:8080
-REACT_APP_SOCKET_URL=http://5.101.51.223:3001
+REACT_APP_SERVER_URL=http://localhost:8080
+REACT_APP_SOCKET_URL=http://localhost:3001
