--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,18 @@
-domain=http://localhost
+domain=http://http://5.101.51.223
+
 frontend.url=${domain}:3000
+
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-spring.datasource.url=jdbc:mariadb://localhost:3306/food-consumer
+
+spring.datasource.url=jdbc:mariadb://maria-db:3306/food-consumer
 spring.datasource.username=root
 spring.datasource.password=67b7f471fa16819e
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+telegram.bot.name=by_cake_x_osp_bot
+telegram.bot.token=7012613586:AAEI0AnpVHv16lxxu_dkqITZ3VA1bF6HNYg
+
 javax.persistence.jdbc.driver=org.mariadb.jdbc.Driver
 org.hibernate.dialect.Dialect=org.hibernate.dialect.MariaDB103Dialect
