--- a/js-backend/.env
+++ b/js-backend/.env
@@ -1,7 +1,7 @@
-DB_HOST="localhost"
+DB_HOST="maria-db"
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=67b7f471fa16819e
 DB_NAME=food-consumer
-SOCKET_IO_ORIGIN=http://localhost:3000
+SOCKET_IO_ORIGIN=http://5.101.51.223:3000
 SERVER_PORT=3001
