--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-domain=http://http://5.101.51.223
+domain=http://5.101.51.223
 
-frontend.url=${domain}:3000
+frontend.url=${domain}:80
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
