--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,8 +11,10 @@ spring.datasource.password=67b7f471fa16819e
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
-telegram.bot.name=by_cake_x_osp_bot
+telegram.bot.username=by_cake_x_osp_bot
 telegram.bot.token=7012613586:AAEI0AnpVHv16lxxu_dkqITZ3VA1bF6HNYg
 
 javax.persistence.jdbc.driver=org.mariadb.jdbc.Driver
 org.hibernate.dialect.Dialect=org.hibernate.dialect.MariaDB103Dialect
+
+image.directory=/root/food-consumer/backend/src/main/resources/static/images/
