--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-domain=http://staff.cakeandbreakfast.com
-
-frontend.url=${domain}
+client.url=http://staff.cakeandbreakfast.com
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
